--- a/pream/FeedView/Feed.storyboard
+++ b/pream/FeedView/Feed.storyboard
@@ -76,30 +76,59 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="myFilters" rowHeight="133" id="dKk-a9-MM5" customClass="MyFiltersTableViewCell" customModule="pream" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="64" width="375" height="133"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="myFilters" rowHeight="175" id="dKk-a9-MM5" customClass="MyFiltersTableViewCell" customModule="pream" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="64" width="375" height="175"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dKk-a9-MM5" id="cUW-Jl-Pia">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="133"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="175"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3ng-tK-IkY">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="133"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="175"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="DpK-88-fZk">
-                                                        <size key="itemSize" width="67" height="62"/>
+                                                        <size key="itemSize" width="130" height="152"/>
                                                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                        <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                                                     </collectionViewFlowLayout>
                                                     <cells>
-                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ETN-63-5C8">
-                                                            <rect key="frame" x="0.0" y="35.5" width="67" height="62"/>
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myFiltersCollection" id="ETN-63-5C8" customClass="MyFiltersCollectionViewCell" customModule="pream" customModuleProvider="target">
+                                                            <rect key="frame" x="20" y="11.5" width="130" height="152"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                                <rect key="frame" x="0.0" y="0.0" width="67" height="62"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="130" height="152"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ed-N4-shX">
+                                                                        <rect key="frame" x="16" y="130" width="98" height="22"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="22" id="xca-tQ-x3J"/>
+                                                                        </constraints>
+                                                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="12"/>
+                                                                        <color key="textColor" name="greyishBrownTwo"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AMR-Rd-Ghn">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" secondItem="AMR-Rd-Ghn" secondAttribute="height" multiplier="1:1" id="VOf-cK-Jpd"/>
+                                                                        </constraints>
+                                                                    </imageView>
+                                                                </subviews>
                                                             </view>
+                                                            <constraints>
+                                                                <constraint firstItem="AMR-Rd-Ghn" firstAttribute="top" secondItem="ETN-63-5C8" secondAttribute="top" id="2RI-ak-wz6"/>
+                                                                <constraint firstItem="6Ed-N4-shX" firstAttribute="top" secondItem="AMR-Rd-Ghn" secondAttribute="bottom" id="469-H4-mkq"/>
+                                                                <constraint firstItem="6Ed-N4-shX" firstAttribute="leading" secondItem="ETN-63-5C8" secondAttribute="leadingMargin" id="STT-bt-TvA"/>
+                                                                <constraint firstItem="AMR-Rd-Ghn" firstAttribute="leading" secondItem="ETN-63-5C8" secondAttribute="leading" id="WBc-7w-DgI"/>
+                                                                <constraint firstAttribute="trailingMargin" secondItem="6Ed-N4-shX" secondAttribute="trailing" id="lMn-4V-veQ"/>
+                                                                <constraint firstAttribute="trailing" secondItem="AMR-Rd-Ghn" secondAttribute="trailing" id="yUW-Vd-Fwa"/>
+                                                            </constraints>
+                                                            <connections>
+                                                                <outlet property="imageView" destination="AMR-Rd-Ghn" id="l1M-ro-b9L"/>
+                                                                <outlet property="titleLabel" destination="6Ed-N4-shX" id="jpe-5x-kkB"/>
+                                                            </connections>
                                                         </collectionViewCell>
                                                     </cells>
                                                 </collectionView>
@@ -116,7 +145,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="userFiltersHeader" rowHeight="77" id="aZ0-73-Tgw">
-                                        <rect key="frame" x="0.0" y="197" width="375" height="77"/>
+                                        <rect key="frame" x="0.0" y="239" width="375" height="77"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aZ0-73-Tgw" id="ZCB-bB-bwS">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
@@ -145,7 +174,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="userFilters" rowHeight="217" id="kfb-xT-A1G" customClass="UserFiltersTableViewCell" customModule="pream" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="274" width="375" height="217"/>
+                                        <rect key="frame" x="0.0" y="316" width="375" height="217"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kfb-xT-A1G" id="51u-PO-4O3">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="217"/>
